refactor(flink): 移除 Flink 集群的日志本地持久化配置
- 注释掉 application-example.yml 中的日志挂载配置
- 删除 application-pvc.yml 中的 flink-log-pvc 定义
- 这些更改旨在取消本地持久化日志，转而使用 ELK 进行日志采集

--- a/flink/example/application/application-example.yml
+++ b/flink/example/application/application-example.yml
@@ -57,8 +57,9 @@ spec:
               mountPath: /opt/flink/jar
             - name: flink-checkpoints  # 挂载checkpoint pvc
               mountPath: /opt/flink/checkpoints
-            - name: flink-log  # 挂载日志 pvc
-              mountPath: /opt/flink/log
+              # 取消本地持久化日志，转用elk采集
+#            - name: flink-log  # 挂载日志 pvc
+#              mountPath: /opt/flink/log
             - name: flink-ha    # HA pvc配置
               mountPath: /opt/flink/flink_recovery
             - name: flink-historyserver # 历史服务器 pvc配置
@@ -70,9 +71,10 @@ spec:
         - name: flink-checkpoints
           persistentVolumeClaim:
             claimName: flink-checkpoint-application-pvc
-        - name: flink-log
-          persistentVolumeClaim:
-            claimName: flink-log-pvc
+          # 取消本地持久化日志，转用elk采集
+#        - name: flink-log
+#          persistentVolumeClaim:
+#            claimName: flink-log-pvc
         - name: flink-ha
           persistentVolumeClaim:
             claimName: flink-ha-pvc
