refactor(flink): 修改 Flink 集群名称
- 将 Flink 集群名称从 "application-deployment-checkpoint-ha" 修改为 "application-example"
- 此修改统一了应用示例的命名，提高了配置文件的一致性和可读性

--- a/flink/example/application/application-example.yml
+++ b/flink/example/application/application-example.yml
@@ -4,7 +4,7 @@ apiVersion: flink.apache.org/v1beta1
 kind: FlinkDeployment
 metadata:
   namespace: flink
-  name: application-deployment-checkpoint-ha  # flink 集群名称
+  name: application-example  # flink 集群名称
 spec:
   image: flink:1.18.0-java8
   flinkVersion: v1_18
