--- a/flink/example/application/application-example.yml
+++ b/flink/example/application/application-example.yml
@@ -15,7 +15,7 @@ spec:
     annotations:
       nginx.ingress.kubernetes.io/rewrite-target: "/$2"
   flinkConfiguration:
-    taskmanager.numberOfTaskSlots: "1"
+    taskmanager.numberOfTaskSlots: "2"
     state.checkpoints.dir: file:///opt/flink/checkpoints
     high-availability.type: kubernetes
     high-availability: org.apache.flink.kubernetes.highavailability.KubernetesHaServicesFactory # JobManager HA
@@ -37,9 +37,9 @@ spec:
     replicas: 1
     resource:
       # 推荐生产环境最小配置为4g
-      memory: "2048m"
-      # 推荐生产环境最小配置为1
-      cpu: 2
+      memory: "1024m"
+      # 推荐生产环境最小配置为1（小于1也不能生效）
+      cpu: 1
   podTemplate:
     spec:
       hostAliases:
@@ -91,7 +91,7 @@ spec:
     entryClass: com.liboshuai.demo.FlinkWordCountDemo
     args:   # 传递到作业main方法的参数（parallelism为并行度关键参数）
       - "--parallelism"
-      - "1"
+      - "4"
       - "--hostname"
       - "master"
       - "--port"
