--- a/flink/operator/values-example.yml
+++ b/flink/operator/values-example.yml
@@ -15,8 +15,10 @@ jvmArgs:
 defaultConfiguration:
   flink-conf.yaml: |+
     # Flink Config Overrides
-    kubernetes.operator.metrics.reporter.slf4j.factory.class: org.apache.flink.metrics.slf4j.Slf4jReporterFactory
-    kubernetes.operator.metrics.reporter.slf4j.interval: 5 MINUTE
+    # 监控配置
+    kubernetes.operator.metrics.reporter.prom.factory.class: org.apache.flink.metrics.prometheus.PrometheusReporterFactory
+    # 与 metrics.port 相对应
+    kubernetes.operator.metrics.reporter.prom.port: 9999
 
     # 参数配置（其他参数参考`flink-kubernetes-operator/conf/flink-conf.yaml`）
     kubernetes.operator.flink.client.timeout: 30 s
@@ -27,3 +29,5 @@ defaultConfiguration:
     kubernetes.operator.leader-election.enabled: true
     kubernetes.operator.leader-election.lease-name: flink-operator-lease
 
+metrics:
+  port: 9999
