--- a/flink/example/application/application-monitor.yml
+++ b/flink/example/application/application-monitor.yml
@@ -2,6 +2,7 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
+  namespace: flink
   name: flink-kubernetes-operator
   labels:
     release: prometheus
