style(k8s): 更新应用监控 YAML 文件中的标签选择器
- 将标签选择器从 `app.kubernetes.io/name` 更改为 `app`
- 这个修改统一了应用部署与监控的标签选择器

--- a/flink/example/application/application-monitor.yml
+++ b/flink/example/application/application-monitor.yml
@@ -9,6 +9,6 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: application-example
+      app: application-example
   podMetricsEndpoints:
     - port: metrics
