--- a/eck/elasticsearch/values-example.yml
+++ b/eck/elasticsearch/values-example.yml
@@ -1,7 +1,7 @@
 apiVersion: elasticsearch.k8s.elastic.co/v1
 kind: Elasticsearch
 metadata:
-  namespace: eck-system
+  namespace: elastic-system
   name: my-es-cluster
 spec:
   version: 8.16.1
