docs(eck): 更新 Elasticsearch节点角色配置示例
- 将 data-nodes 的 node.roles 从 ["worker"] 修改为 ["data"]
- 此修改更准确地反映了数据节点的角色配置

--- a/eck/elasticsearch/values-example.yml
+++ b/eck/elasticsearch/values-example.yml
@@ -23,7 +23,7 @@ spec:
     - name: data-nodes
       count: 2
       config:
-        node.roles: ["worker"]
+        node.roles: ["data"]
       volumeClaimTemplates:
         - metadata:
             name: elasticsearch-data
