feat(eck): 添加集群级别 volumeClaimDeletePolicy 并调整节点级别设置
- 在集群级别添加 volumeClaimDeletePolicy 设置为 DeleteOnScaledownOnly
- 移除 master-nodes 和 data-nodes节点级别的 volumeClaimDeletePolicy 设置

--- a/eck/elasticsearch/values-example.yml
+++ b/eck/elasticsearch/values-example.yml
@@ -5,12 +5,12 @@ metadata:
   name: my-es-cluster
 spec:
   version: 8.16.1
+  volumeClaimDeletePolicy: DeleteOnScaledownOnly
   nodeSets:
     - name: master-nodes
       count: 1
       config:
         node.roles: ["master"]
-      volumeClaimDeletePolicy: Retain
       volumeClaimTemplates:
         - metadata:
             name: elasticsearch-data
@@ -25,7 +25,6 @@ spec:
       count: 2
       config:
         node.roles: ["data"]
-      volumeClaimDeletePolicy: Retain
       volumeClaimTemplates:
         - metadata:
             name: elasticsearch-data
