--- a/eck/kibana/values-example.yml
+++ b/eck/kibana/values-example.yml
@@ -23,5 +23,5 @@ spec:
             limits:
               memory: 2.5Gi
               cpu: 2
-      nodeSelector:
-        type: frontend
+#      nodeSelector:
+#        type: frontend
