refactor(eck): 更新 values-example.yml 示例配置
- 移除旧的 fleet-server 和 elastic-agent配置示例
- 添加新的 fleet-server 和 elastic-agent 配置示例
- 更新 Kibana 和 Elasticsearch 配置示例- 添加 RBAC 配置示例
- 更新 Operator 配置示例

--- a/eck/example/values-example.yml
+++ b/eck/example/values-example.yml
@@ -1,80 +1,25 @@
-# fleet-server
----
-apiVersion: agent.k8s.elastic.co/v1alpha1
-kind: Agent
-metadata:
-  name: my-fleet-server
-  namespace: elastic-system
-spec:
-  version: 8.16.1
-  kibanaRef:
-    name: my-kibana
-    namespace: elastic-system
-  elasticsearchRefs:
-    name: my-es-cluster
-    namespace: elastic-system
-  mode: fleet
-  fleetServerEnabled: true
-  policyID: eck-fleet-server
-  deployment:
-    replicas: 1
-    podTemplate:
-      spec:
-        serviceAccountName: elastic-agent
-        automountServiceAccountToken: true
-        securityContext:
-          runAsUser: 0
-
-# elastic-agent
----
-apiVersion: agent.k8s.elastic.co/v1alpha1
-kind: Agent
-metadata:
-  name: my-elastic-agent
-  namespace: elastic-system
-spec:
-  version: 8.16.1
-  kibanaRef:
-    name: my-kibana
-    namespace: elastic-system
-  fleetServerRef:
-    name: my-fleet-server
-    namespace: elastic-system
-  mode: fleet
-  policyID: eck-agent
-  daemonSet:
-    podTemplate:
-      spec:
-        serviceAccountName: elastic-agent
-        automountServiceAccountToken: true
-        securityContext:
-          runAsUser: 0
-        volumes:
-          - name: agent-data
-            emptyDir: {}
-
-# Kibana            
----
 apiVersion: kibana.k8s.elastic.co/v1
 kind: Kibana
 metadata:
+  name: kibana
   namespace: elastic-system
-  name: my-kibana
 spec:
-  version: 8.16.1
+  version: 9.0.0
   count: 1
   elasticsearchRef:
-    name: my-es-cluster
+    name: elasticsearch
     namespace: elastic-system
   config:
-    xpack.fleet.agents.elasticsearch.hosts: ["<ELASTICSEARCH_HOST_URL>-es-http.default.svc:9200"]
-    xpack.fleet.agents.fleet_server.hosts: ["<FLEET_SERVER_HOST_URL>-sample-agent-http.default.svc:8220"]
+    xpack.fleet.agents.elasticsearch.hosts: ["https://elasticsearch-es-http.default.svc:9200"]
+    xpack.fleet.agents.fleet_server.hosts: ["https://fleet-server-agent-http.default.svc:8220"]
     xpack.fleet.packages:
       - name: system
         version: latest
       - name: elastic_agent
         version: latest
       - name: fleet_server
+        version: latest
+      - name: kubernetes
         version: latest
     xpack.fleet.agentPolicies:
       - name: Fleet Server on ECK policy
@@ -98,31 +43,18 @@ spec:
           - logs
           - metrics
         unenroll_timeout: 900
-        is_default: true
         package_policies:
-          - name: system-1
-            id: system-1
-            package:
+          - package:
               name: system
-  podTemplate:
-    spec:
-      containers:
-        - name: kibana
-          env:
-            - name: NODE_OPTIONS
-              value: "--max-old-space-size=2048"
-          resources:
-            requests:
-              memory: 1Gi
-              cpu: 0.5
-            limits:
-              memory: 2.5Gi
-              cpu: 2
+            name: system-1
+          - package:
+              name: kubernetes
+            name: kubernetes-1
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: my-kibana-ingress
+  name: kibana-ingress
   namespace: elastic-system
   annotations:
     kubernetes.io/ingress.class: "nginx"
@@ -138,62 +70,98 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: my-kibana-kb-http
+                name: kibana-kb-http
                 port:
                   number: 5601
-
-# ElasticSearch
 ---
 apiVersion: elasticsearch.k8s.elastic.co/v1
 kind: Elasticsearch
 metadata:
+  name: elasticsearch
   namespace: elastic-system
-  name: my-es-cluster
 spec:
-  version: 8.16.1
-  volumeClaimDeletePolicy: DeleteOnScaledownOnly
-  nodeSets:
-    - name: master-nodes
-      count: 1
-      config:
-        node.roles: ["master"]
-      volumeClaimTemplates:
-        - metadata:
-            name: elasticsearch-data
-          spec:
-            accessModes:
-              - ReadWriteOnce
-            resources:
-              requests:
-                storage: 10Gi
-            storageClassName: nfs
-    - name: data-nodes
-      count: 2
-      config:
-        node.roles: ["data"]
-      volumeClaimTemplates:
-        - metadata:
-            name: elasticsearch-data
-          spec:
-            accessModes:
-              - ReadWriteOnce
-            resources:
-              requests:
-                storage: 20Gi
-            storageClassName: nfs
-
-# 其他
+  version: 9.0.0
+---
+apiVersion: agent.k8s.elastic.co/v1alpha1
+kind: Agent
+metadata:
+  name: fleet-server
+spec:
+  version: 9.0.0
+  kibanaRef:
+    name: kibana
+  elasticsearchRefs:
+    - name: elasticsearch
+  mode: fleet
+  fleetServerEnabled: true
+  policyID: eck-fleet-server
+  deployment:
+    replicas: 1
+    podTemplate:
+      spec:
+        serviceAccountName: fleet-server
+        automountServiceAccountToken: true
+        securityContext:
+          runAsUser: 0
+---
+apiVersion: agent.k8s.elastic.co/v1alpha1
+kind: Agent
+metadata:
+  name: elastic-agent
+spec:
+  version: 9.0.0
+  kibanaRef:
+    name: kibana
+  fleetServerRef:
+    name: fleet-server
+  # Advanced configuration is possible in Fleet mode to
+  # customize the agent's providers.
+  # See https://www.elastic.co/docs/reference/fleet/advanced-kubernetes-managed-by-fleet
+  # for more information.
+  # Note: the sample configuration below enables deployment metadata collection which is not
+  # enabled by default because it has a performance impact.
+  # config:
+  #   fleet:
+  #     enabled: true
+  #   providers.kubernetes:
+  #     add_resource_metadata:
+  #       deployment: true
+  mode: fleet
+  policyID: eck-agent
+  daemonSet:
+    podTemplate:
+      spec:
+        serviceAccountName: elastic-agent
+        hostNetwork: true
+        dnsPolicy: ClusterFirstWithHostNet
+        automountServiceAccountToken: true
+        securityContext:
+          runAsUser: 0
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: elastic-agent
+  name: fleet-server
 rules:
-  - apiGroups: [""] # "" indicates the core API group
+  - apiGroups: [""]
     resources:
       - pods
-      - nodes
       - namespaces
+      - nodes
+    verbs:
+      - get
+      - watch
+      - list
+  - apiGroups: ["apps"]
+    resources:
+      - replicasets
+    verbs:
+      - get
+      - watch
+      - list
+  - apiGroups: ["batch"]
+    resources:
+      - jobs
     verbs:
       - get
       - watch
@@ -205,24 +173,105 @@ rules:
       - get
       - create
       - update
-  - apiGroups: ["apps"]
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: fleet-server
+  namespace: default
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: fleet-server
+subjects:
+  - kind: ServiceAccount
+    name: fleet-server
+    namespace: default
+roleRef:
+  kind: ClusterRole
+  name: fleet-server
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: elastic-agent
+rules:
+  - apiGroups: [""]
+    resources:
+      - pods
+      - nodes
+      - namespaces
+      - events
+      - services
+      - configmaps
+    verbs:
+      - get
+      - watch
+      - list
+  - apiGroups: ["coordination.k8s.io"]
+    resources:
+      - leases
+    verbs:
+      - get
+      - create
+      - update
+  - nonResourceURLs:
+      - "/metrics"
+    verbs:
+      - get
+  - apiGroups: ["extensions"]
     resources:
       - replicasets
     verbs:
-      - list
-      - watch
-  - apiGroups: ["batch"]
+      - "get"
+      - "list"
+      - "watch"
+  - apiGroups:
+      - "apps"
+    resources:
+      - statefulsets
+      - deployments
+      - replicasets
+      - daemonsets
+    verbs:
+      - "get"
+      - "list"
+      - "watch"
+  - apiGroups:
+      - ""
+    resources:
+      - nodes/stats
+    verbs:
+      - get
+  - nonResourceURLs:
+      - "/metrics"
+    verbs:
+      - get
+  - apiGroups:
+      - "batch"
     resources:
       - jobs
+      - cronjobs
     verbs:
-      - list
-      - watch
+      - "get"
+      - "list"
+      - "watch"
+  - apiGroups:
+      - "storage.k8s.io"
+    resources:
+      - storageclasses
+    verbs:
+      - "get"
+      - "list"
+      - "watch"
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: elastic-agent
-  namespace: elastic-system
+  namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -231,7 +280,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: elastic-agent
-    namespace: elastic-system
+    namespace: default
 roleRef:
   kind: ClusterRole
   name: elastic-agent
