--- a/eck/example/values-example.yml
+++ b/eck/example/values-example.yml
@@ -72,6 +72,7 @@ metadata:
   namespace: elastic-system
 spec:
   version: 9.0.0
+  volumeClaimDeletePolicy: DeleteOnScaledownOnly
   monitoring:
     metrics:
       elasticsearchRefs:
