--- a/eck/operator/.env.example
+++ b/eck/operator/.env.example
@@ -5,7 +5,7 @@
 # chart版本
 CHART_VERSION="3.1.0"
 # 命名空间
-NAMESPACE="elastic-system"
+NAMESPACE="eck"
 # release名称
-RELEASE_NAME="elastic-operator"
+RELEASE_NAME="eck-operator"
 
