refactor(operator): 更新操作器名称和相关标签
- 将 RELEASE_NAME 从 "eck-operator" 修改为 "elastic-operator"
- 更新 Prometheus 发现标签，将 app标签从 "eck-operator" 改为 "elastic-operator"

--- a/eck/operator/values-example.yml
+++ b/eck/operator/values-example.yml
@@ -47,7 +47,7 @@ podMonitor:
   enabled: true
   # 添加标签便于 Prometheus 发现
   labels:
-    app: eck-operator
+    app: elastic-operator
     release: kube-prom-stack
   # 部署到 monitoring 命名空间（与你的 Prometheus 在同一命名空间）
   namespace: monitoring
