--- a/eck/operator/.env.example
+++ b/eck/operator/.env.example
@@ -7,5 +7,5 @@ CHART_VERSION="3.1.0"
 # 命名空间
 NAMESPACE="elastic-system"
 # release名称
-RELEASE_NAME="eck-operator"
+RELEASE_NAME="elastic-operator"
 
